--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,9 @@
-name: dswx_val
+name: dswx_s1
 channels:
  - conda-forge
 dependencies:
  - python<3.12
- - asf_search
+ - asf_search>=6.7.0
  - boto3
  - click
  - contextily
