fix ssh to https for pip install

--- a/environment.yml
+++ b/environment.yml
@@ -49,4 +49,4 @@ dependencies:
    - elasticsearch-dsl<8.0 # To ensure version 7 is compatible: https://elasticsearch-dsl.readthedocs.io/en/latest/#compatibility
    - pysheds
    - git+https://github.com/OPERA-Cal-Val/tile-stitcher
-   - git+git@github.com:cmarshak/DSWX-SAR.git@default-params-update
+   - git+https://github.com/cmarshak/DSWX-SAR.git@default-params-updates
